<resources>
    <string name="app_name">WasThereACrime</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_crime">CrimeActivity</string>

    <string name="preferences_file_name">app_preferences</string>
    <string name="pref_key_contact_number">contact_number</string>
    <!--<string name="pref_key_contact_number_default"></string>-->

    <string name="label_latitude_short">Lat: </string>
    <string name="label_longitude_short">Lng: </string>
    <string name="label_crime_date">Crime commited at: </string>

    <string name="hint_start_date">Start datetime</string>
    <string name="hint_end_date">End datetime</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_contact_number">Contact number</string>

    <string name="btn_show_crimes">Show crimes</string>
    <string name="btn_save_contact">Save number</string>

    <string name="alarm_number">112</string>
    <string name="sms_action">sms</string>
    <string name="map_action">map</string>
    <string name="action_heat">heat</string>
    <string name="action_markers">marker</string>

    <string name="sms_content">I need help, I am here: </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings_demo">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_chart">ChartActivity</string>

</resources>
