<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.admin.wasthereacrime.activity.CrimeDetailsActivity"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/edit_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_start_date"
        android:textColor="#ffffff"
        android:textColorHint="#000000"/>

    <EditText
        android:id="@+id/edit_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_end_date"
        android:textColor="#ffffff"
        android:textColorHint="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="8">

            <EditText
                android:id="@+id/edit_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_latitude"
                android:textColor="#ffffff"
                android:textColorHint="#000000"/>

            <EditText
                android:id="@+id/edit_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_longitude"
                android:textColor="#ffffff"
                android:textColorHint="#000000"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_choose_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_place"
            android:background="@color/colorAccent"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_show_crimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_crimes"
        android:background="@color/colorAccent"/>

</LinearLayout>
