<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_crime" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.wasthereacrime.activity.CrimeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/crime_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_crime_date"/>

            <TextView
                android:id="@+id/crime_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/fab_margin">

            <TextView
                android:id="@+id/lat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_latitude_short"/>

            <TextView
                android:id="@+id/lat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/fab_margin">

            <TextView
                android:id="@+id/lng_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_longitude_short"/>

            <TextView
                android:id="@+id/lng_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/place_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/fab_margin"/>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
